resolved line height upon shrinking and column collapse

--- a/styles.css
+++ b/styles.css
@@ -7,11 +7,12 @@
 body {
   background-color: hsl(204, 43%, 93%);
   display: flex;
-  height: 100vh;
+  height: 100%;
   width: 100%;
   justify-content: center;
   align-items: center;
   padding-inline: 2rem;
+  padding-block: 1.5rem;
 }
 
 /* Creating my CSS Variables */
@@ -35,6 +36,8 @@ body {
   font-family: Karla, sans-serif, "Times New Roman", Times, serif;
   font-size: 0.9rem;
   width: 100%;
+  border-radius: 0.5rem;
+  overflow: hidden;
   border-radius: 0.5rem;
   overflow: hidden;
   display: flex;
@@ -85,7 +88,7 @@ body {
   padding: 2rem;
   width: inherit;
   color: white;
-  line-height: 0.5rem;
+  line-height: initial;
 }
 
 
@@ -137,12 +140,17 @@ body {
 /* Why section ends here */
 
 /* Tablet viewport */
-@media  (min-width: 768px) {
+@media  (min-width: 500px) {
+    body {
+        padding-block: 1.5rem;
+        height: 100%;
+    }
     .container {
         max-width: 600px;
         padding-inline: 0;
         border-radius: 0.5rem;
         overflow: hidden;
+        padding-block: 0;
     }
 
     .join {
@@ -150,7 +158,7 @@ body {
         padding-inline: 2rem;
         padding-block: 3rem;
     }
-    
+
     .row-span-2 {
         display: flex;
         width: 100%;
@@ -168,5 +176,13 @@ body {
         border-radius: 0px;
         padding-inline: 2rem;
         padding-block: 4rem;
+    }
+}
+
+@media (min-width: 768px) {
+    body {
+        padding: 0;
+        height: 100%;
+        padding-block: 2rem;
     }
 }
